--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,37 +1,44 @@
 .registration {
   display: flex;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
   height: 100vh;
   width: 100vw;
   background-color: #1B2432;
-  
+  padding: 50px;
 }
 
 .registration h1{
   color:white;
   margin-bottom: 30px;
+  text-align: center;
 }
 
 .registration .row{
   display: flex;
   justify-content: space-between;
   margin-bottom: 15px;
+  width: 100%;
+  max-width: 600px;
+  
 }
 
 .registration .submitButton button{
   padding: 10px 20px; 
+  text-align: center; 
   background-image: linear-gradient(180deg, #ffa48d, #ff4e98); 
   color: white; 
   font-weight: bold; 
   border: none; 
   border-radius: 25px; 
-  text-align: center; 
   text-decoration: none; 
   display:inline-block; 
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
   transition: all 0.3s ease; 
   cursor: pointer;
   outline: none;
+  
 }
 
 .registration button:hover {
@@ -40,12 +47,13 @@
 }
 
 .registration input {
-  width: 48%;
-  padding: 8px;
+  width: calc(50% - 10px); 
+  padding: 9px;
   border-radius: 25px;
   border: none;
   box-shadow: 0 1px 7px rgb(205, 172, 206);
-  margin-bottom: 25px; /* Spacing between input fields */
+  margin-bottom: 30px; /* Spacing between input fields */
+  display: flex;
   
 }
 
