--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -81,3 +81,34 @@
   width: 100vw;
   background-color: #1B2432
 }
+
+.signIn {
+  display: flex;
+  justify-content: center;
+  height: 100vh;
+  width: 100vw;
+  background-color: #1B2432
+}
+
+.signIn .circle1{
+  width: 450px;
+  height:450px;
+  border-radius: 50%; /*make it round*/
+  border: 1.5px solid #675E9C; 
+  background-color: transparent;
+  position:absolute;
+  top:50%;
+  left:50%;
+  transform: translate(-50%, -50%);
+}
+.signIn .circle2{
+  width: 450px;
+  height:450px;
+  border-radius: 50%; /*make it round*/
+  border: 1.5px solid #675E9C; 
+  background-color: transparent;
+  position:absolute;
+  top:48%;
+  left:50%;
+  transform: translate(-50%, -50%);
+}
