--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -93,9 +93,46 @@
 .signIn h3{
   color:white;
   font-family:'Bookman', 'URW Bookman L', serif;
-  
   padding-top: 130px;
+  text-align: center;
 }
+.signIn .login-form{
+  position: relative;
+  margin-bottom: 15px;
+}
+.signIn .login-form input{
+  width: 100%;
+  padding: 10px;
+  margin: 25px 0 ;
+  background: transparent;
+  border: none;
+  border-bottom: 2px solid #FFF2D8;
+  outline: none;
+  color: white;
+  font-family: 'Snell Roundhand', cursive;
+}
+.signIn .buttons{
+  display:flex;
+  justify-content: center;
+  padding:20px 0;
+  
+}
+.signIn button{
+  padding: 10px 20px; 
+  text-align: center; 
+  background-image: linear-gradient(180deg, #ffa48d, #ff4e98); 
+  color: white; 
+  font-weight: bold; 
+  border: none; 
+  border-radius: 25px; 
+  text-decoration: none; 
+  display:inline-block; 
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
+  transition: all 0.3s ease; 
+  cursor: pointer;
+  outline: none;
+}
+
 .signIn .circle1{
   width: 450px;
   height:450px;
