--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,18 @@
+.landing {
+  display: flex;
+  justify-content: center;
+  height: 100vh;
+  width: 100vw;
+  background-color: #1B2432
+}
+.landing h2{
+  color: #EEE2DE;
+  font-family: 'Snell Roundhand', 'cursive';
+}
+
+
+
+
 .registration {
   display: flex;
   flex-direction: column;
@@ -10,7 +25,7 @@
   
 }
 .registration h1{
-  font-family:'Brush Script MT', 'Brush Script Std', cursive;
+  font-family:'Brush Script MT', 'Brush Script Std', 'cursive';
   color:#F0ECE5;
   margin-bottom: 30px;
   text-align: center;
@@ -66,20 +81,12 @@
   display: flex;
   
 }
-/*to be determined*/
+
 .registration input:hover {
   box-shadow: 0 5px 10px #7C93C3;
   transform: scale(1.05); /* Slightly increase size on hover */
 }
 
-
-.landing {
-  display: flex;
-  justify-content: center;
-  height: 100vh;
-  width: 100vw;
-  background-color: #1B2432
-}
 
 .signIn {
   display: flex;
