--- a/frontend/src/components/Navbar.module.css
+++ b/frontend/src/components/Navbar.module.css
@@ -54,10 +54,15 @@ a {
   /* logo  */
 .logo {
   font-size: 30px;
-  font-family: Anonymous Pro;
+  font-family: Georgia, serif;
   color: white;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Example shadow, adjust as needed */
   letter-spacing: 1px;
+  font-style: oblique;
+  font-weight: 600;
+  
+  font-stretch: ultra-expanded	
+
 }
 
 
