--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -21,7 +21,24 @@
   transform:translateY(-12px)
 }
 
-
+.landing .buttons button{
+  margin: 40px;
+  padding: 20px 50px;
+  border-radius: 25px;
+  background:linear-gradient(90deg, #7b53bd, #d669bb);
+  text-align: center;
+  color:white;
+  font-size: 15px ;
+  font-weight:200;
+  border-color:white;
+  border-width: 0.01cap;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.landing .buttons button:hover{
+  box-shadow: 0 5px 10px #7C93C3;
+  transform: scale(1.05);
+  background: #8355BD;
+}
 
 
 
@@ -106,7 +123,7 @@
   height: 100vh;
   width: 100vw;
   background-color: #1B2432;
-  background-image: linear-gradient(to top, #1A2A5E 45%, #e28743 100%);
+  background: linear-gradient(to bottom, #780206, #061161);
   
   
 }
