--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,14 +3,19 @@
   justify-content: center;
   height: 100vh;
   width: 100vw;
-  background-color: #1B2432
+  background-color: #1B2432;
+  background-image: url('./assets/tree.png'), url('./assets/birds.png');
+  background-repeat: no-repeat , no-repeat;
+  background-position: 1% 70%, 100% 0.1px;
 }
 .landing h2{
   font-size: 25px;
   white-space: nowrap; /* prevent the text from wrapping */
   color: #FDF7E4;
   font-family: 'Snell Roundhand', 'cursive';
-  padding: 100px 
+  padding: 100px; 
+  
+
 }
 /* when the cursor is on the letter, it bounces*/
 .bounce{
@@ -123,7 +128,10 @@
   height: 100vh;
   width: 100vw;
   background-color: #1B2432;
-  background: linear-gradient(to bottom, #780206, #061161);
+  /*background: linear-gradient(to bottom, #780206, #061161);*/
+  background-image: url('./assets/huge_bird.png');
+  background-repeat: no-repeat;
+  background-position: 100% 10%;
   
   
 }
