--- a/frontend/src/components/Navbar.module.css
+++ b/frontend/src/components/Navbar.module.css
@@ -1,8 +1,10 @@
 
 * {
+  overflow: hidden;
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  background-color: #1B2432;
 }
 
 ul {
@@ -24,22 +26,28 @@ a {
   color: white; 
   font-weight: bold; 
   border: none; 
-  border-radius: 25px; 
+  border-radius: 30px; 
   text-align: center; 
   text-decoration: none; 
   display:inline-block; 
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
   transition: all 0.3s ease; 
   cursor: pointer;
+  margin-bottom: 10px; 
+  margin-right: 15px;
+  margin-top: 10px;
+  margin-right: 15px;
 }
 
 .navLink:hover {
-  box-shadow: 0 5px 15px #FEFAE0; /* Larger shadow on hover */
+  
+ /* box-shadow: 0 5px 15px #FEFAE0; Larger shadow on hover */
   transform: scale(1.05); /* Slightly increase size on hover */
 }
 
 /* navbar */
 .navbar {
+  
   background-color:#1B2432;
   padding: 10px 20px;
   display: flex;
@@ -68,7 +76,6 @@ a {
 
   /* ul  */
 .navMenu {
-
   margin-left: auto; /* This will push the navMenu to the right */
   display: flex;
   gap: 60px;
