--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,5 @@
 .landing {
+  overflow: hidden;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -16,9 +17,9 @@
   color: #FDF7E4;
   font-family: 'Snell Roundhand', 'cursive';
   padding: 70px; 
-  
 
 }
+
 /* when the cursor is on the letter, it bounces*/
 .bounce{
   display: inline-block;
