--- a/frontend/src/components/Navbar.module.css
+++ b/frontend/src/components/Navbar.module.css
@@ -26,7 +26,7 @@ a {
   color: white; 
   font-weight: bold; 
   border: none; 
-  border-radius: 30px; 
+  border-radius: 25px; 
   text-align: center; 
   text-decoration: none; 
   display:inline-block; 
@@ -38,7 +38,7 @@ a {
 
 .navLink:hover {
   
- /* box-shadow: 0 5px 15px #FEFAE0; Larger shadow on hover */
+  box-shadow: 0 5px 15px #FEFAE0; /*Larger shadow on hover */
   transform: scale(1.05); /* Slightly increase size on hover */
 }
 
