modified the font-family

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -40,7 +40,7 @@
   font-weight:200;
   border-color:white;
   border-width: 0.01cap;
-  font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
+  font-family: 'Snell Roundhand', 'cursive';
 }
 .landing .buttons button:hover{
   box-shadow: 0 5px 10px #7C93C3;
@@ -63,7 +63,7 @@
   
 }
 .registration h1{
-  font-family:'Brush Script MT', 'Brush Script Std', 'cursive';
+  font-family: 'Snell Roundhand', 'cursive';
   color:#F0ECE5;
   margin-bottom: 30px;
   text-align: center;
