--- a/frontend/src/components/Navbar.module.css
+++ b/frontend/src/components/Navbar.module.css
@@ -60,7 +60,7 @@ a {
   /* logo  */
 .logo {
   font-size: 30px;
-  font-family: Georgia, serif;
+  font-family: 'Snell Roundhand', 'cursive';
   color: white;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Example shadow, adjust as needed */
   letter-spacing: 1px;
