index.css added

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -304,3 +304,236 @@
   left:49%;
   transform: translate(-50%, -50%);/*shift the element up and left by half half*/
 }
+
+.discussion{
+  background-color: #1B2432;
+  color:white;
+  height: 100vh;
+  font-family:Arial, Helvetica, sans-serif
+}
+@media (min-width:600px){
+  .discussion .flexbox{
+    display: -webkit-flex;
+    display: flex;
+    height: 100vh;
+  }
+  .discussion .left_column{
+    -webkit-flex:0.5;
+    flex:0.5;
+    background-image: linear-gradient(#2a3446, rgb(101, 76, 112));
+    position: relative;
+  }
+  .discussion .channel_selection{
+    -webkit-flex:2;
+    flex:2;
+    border-top: 3px solid;
+    border-left: 3px solid;
+    border-right: 3px solid;
+    border-image: linear-gradient(to right, rgb(94, 92, 252), rgb(255, 111, 255)) 1;
+  }
+  .discussion .discussion_board{
+    -webkit-flex:6;
+    flex:6;
+  }
+}
+
+/* Left Column */
+.discussion .home_icon{
+  width: 80%;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right:0;
+  margin: auto;
+}
+
+/* Channel Selection */
+.discussion .course_name{
+  height: 80px;
+  margin-left: 15px;
+  display: flex;
+  align-items: center;
+}
+
+.discussion .search input[type=text]{
+  width: 100%;
+  height: 40px;
+  background-color: rgb(15, 15, 17);
+  border: None;
+  padding-left: 20px;
+}
+
+/* Discussion Board */
+.discussion .channel_name{
+  height: 50px;
+  display: flex;
+  align-items: center;
+  position: relative fixed;
+  border-bottom: solid rgba(148, 148, 150, 0.1);
+}
+.discussion .channel_name h1{
+  margin-left: 15px;
+}
+
+.discussion .channel_name img{
+  position: absolute;
+  right: 0;
+  margin-right: 30px;
+}
+
+
+  .discussion #messages{
+    overflow: auto;
+    height: 80%;
+   
+  }
+  .message{
+    margin:0px;
+    padding: 0 14px;
+    font-size: 16px;
+    word-wrap: break-word;
+    white-space: normal;
+  }
+  
+  /* left message */
+  .message_left{
+    float: left;
+    line-height: 2.5em;
+  }
+  
+  /* right message */
+  .message_right{
+    float:right;
+    line-height: 2.5em;
+  }
+  
+  .clear{
+    clear: both;
+  }
+
+/* Send Message */
+.discussion #send{
+  border: solid rgba(148, 148, 150, 0.1);
+  width:80%;
+  margin: auto;
+}
+  .discussion #textarea{
+    width:100%;
+    background-color: transparent;
+    border: none;
+    line-height: 16px;
+    height: 60px;
+    text-align: left;
+    color: white;
+    padding: 5px;
+  }
+
+  .discussion .formatting-bar{
+    margin-bottom: 0px;
+    height: 30px;
+    background-image: linear-gradient(#2a3446, rgb(101, 76, 112));
+    position:relative;
+  }
+
+    .discussion .formatting-bar .btn{
+      font-weight: bold;
+      margin-right: 5px;
+      background-color: transparent;
+      border:none;
+      padding-left:10px;
+      margin-top: 10px;
+      
+    }
+    .discussion.formatting-bar .btn:hover{
+      cursor: pointer;
+    }
+
+
+
+
+
+.discussion #send_btn{
+  position: absolute;
+  right: 20px;
+  margin: auto;
+  bottom:0;
+  top:0;
+  background-color:transparent;
+  border: none;
+  
+}
+.discussion #send_btn:hover{
+  cursor: pointer;
+}
+
+
+
+.select_discussion{
+  background-color: #1B2432;
+  color:white;
+  height: 100vh;
+  font-family:Arial, Helvetica, sans-serif;
+  padding-left: 3%;
+  padding-right: 3%;
+}
+
+.select_discussion header{
+  text-align: right;
+}
+.select_discussion .logout{
+  font-size: 15px;
+  background-color: transparent;
+  border: none;
+  color: grey;
+  padding: 20px;
+  margin-top: 10px;
+}
+
+.select_discussion .logout:hover{
+  cursor: pointer;
+}
+
+.select_discussion .upper_bar{
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.select_discussion .upper_bar a{
+  
+}
+
+
+
+.select_discussion .select_board{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 100px, 100px;
+  grid-gap: 25px;
+}
+
+.select_discussion .item{
+  background-color: #2b2b41;
+  padding: 15px;
+  margin: 5px;
+  display: flex;
+  position: relative;
+}
+.select_discussion .item a{
+  position: absolute;
+  top: 0;
+  left: 0;
+  height:100%;
+  width: 100%;
+}
+
+.select_discussion .item:hover{
+  cursor: pointer;
+}
+.select_discussion img{
+  max-width: 100%;
+  width: 50px;
+  height:auto;
+  margin-right: 70px;
+
+}
