--- a/frontend/src/components/Navbar.module.css
+++ b/frontend/src/components/Navbar.module.css
@@ -1,11 +1,10 @@
 
 * {
-  overflow: hidden;
+  /*overflow: hidden;*/
   padding: 0;
   margin: 0;
   box-sizing: border-box;
   background-color: #1B2432;
-  
 }
 
 ul {
@@ -31,16 +30,20 @@ a {
   text-decoration: none; 
   display:inline-block; 
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
-  transition: all 0.3s ease; 
+  transition: box-shadow 0.3s ease; 
   cursor: pointer;
+  z-index: 2;
   
+
   
 }
 
+
+
 .navLink:hover {
-  
-  box-shadow: 0 5px 15px #FEFAE0; /*Larger shadow on hover */
-  transform: scale(1.05); /* Slightly increase size on hover */
+  box-shadow: 0 5px 15px #FEFAE0; /*Larger shadow on hover*/ 
+  transform: scale(1.05); /*Slightly increase size on hover */
+
 }
 
 /* navbar */
@@ -53,6 +56,7 @@ a {
   align-items: center;
   gap: 40px;
   min-height: 70px;
+  
   
 }
 
@@ -87,6 +91,7 @@ a {
   .hamburger {
     display: block;
     cursor: pointer;
+    z-index: 2;
       
   }
 
@@ -125,6 +130,8 @@ a {
     transition: 0.7s ease-in-out;
     background-color:#1B2432;
     padding: 10px;
+    z-index: 2;
+
   }
 
   .navMenu.active{
@@ -143,6 +150,7 @@ a {
     margin:0;
     box-shadow:none;
     border-radius: 10px;
+    z-index: 2;
   }
 
 }
