--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,7 +5,8 @@
   justify-content: center;
   background-color: #1B2432;
   background-image: url('./assets/background .png');
-  background-repeat: no-repeat
+  background-repeat: no-repeat;
+  height:100vh
   
 }
 .birds {
