added the search feature

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -499,6 +499,10 @@
   cursor: pointer;
 }
 
+.discussion .search ::not(:placeholder-shown){
+  color:#FFF2D8;
+}
+
 
 /* -------------------- Select Discussion -------------------------- */
 .select_discussion{
