--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -594,3 +594,106 @@
   padding-left: 30px;
   background: transparent;
 }
+
+.userManagement{
+  background: #1B2432;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  padding: 50px;
+}
+
+.userManagement h1{
+  color:white;
+  text-align: center;
+  
+  margin-bottom: 20px;
+  width: 40%
+}
+
+.userManagement .inputNewUser {
+  width: 40%;
+  display: flex;
+  margin-bottom: 20px; 
+  justify-content: flex-end; 
+}
+
+.userManagement .inputNewUser button {
+  margin-left: 40px;
+  padding: 8px 10px;
+  text-align: center;
+  background-image: linear-gradient(180deg, #ffa48d, #ff4e98);
+  color: white;
+  font-weight: bold;
+  border: none;
+  border-radius: 25px;
+  text-decoration: none;
+  display: inline-block;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease;
+  cursor: pointer;
+  outline: none;
+}
+
+.userManagement .inputNewUser button:hover {
+  box-shadow: 0 5px 10px #7C93C3;
+  transform: scale(1.05);
+}
+
+.userManagement .inputNewUser input { 
+  background-color: transparent;
+  width: calc(50% - 10px);
+  padding: 9px ;
+  border-radius: 20px;
+  border: none;
+  box-shadow: 0 2px 7px #80185F;
+  margin-right: 10px; /* Adjust spacing between input and button */
+  display: flex;
+  color: white;
+}
+
+.userManagement .inputNewUser input:hover {
+  background-color: transparent;
+  box-shadow: 0 5px 10px #7C93C3;
+  transform: scale(1.05);
+  color: white;
+}
+.userManagement .deleteUser {
+  width: 100%;
+  display: flex;
+  align-items: center; 
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+
+.userManagement .deleteUser div {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px; 
+  
+}
+
+.userManagement .deleteUser .user {
+  margin-right: 10px; 
+  color: white;
+}
+
+.userManagement .deleteUser button {
+  padding: 8px 10px;
+  text-align: center;
+  background-image: linear-gradient(180deg, #c76851, #ff4e98);
+  color: white;
+  font-weight: bold;
+  border: none;
+  border-radius: 25px;
+  text-decoration: none;
+  display: inline-block;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease;
+  cursor: pointer;
+  outline: none;
+
+}
