--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -742,3 +742,22 @@
   outline: none;
 
 }
+
+.discussion .manageMember_btn{
+  background-image: linear-gradient(#3c4c69, rgb(101, 76, 112));
+  color: white;
+  font-weight: bold;
+  border: none;
+  text-decoration: none;
+  cursor: pointer;
+  border-radius: 30px;
+  padding: 5px 7px;
+  
+}
+
+.discussion .manageMember_btn:hover {
+  background-color: transparent;
+  box-shadow: 0 5px 10px #7C93C3;
+  transform: scale(1.05);
+  color: white;
+}
