--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,16 +15,16 @@
   right: 0;
   background: url('./assets/birds.png') no-repeat 100% 0.1px;
   background-size: 40%;
-  z-index: 1; /* Above the main content but below the text */
-  width: 100%; /* Takes full width of the container */
-  height: 100%; /* Takes full height of the container */
+  z-index: 1;
+  width: 100%; 
+  height: 100%; 
 }
 
 .landing .row h2{
-  position: relative; /* This will allow z-index to take effect */
+  position: relative;
   z-index: 2;
   font-size: 30px;
-  white-space: nowrap; /* prevent the text from wrapping */
+  white-space: nowrap; 
   color: #FDF7E4;
   font-family: 'Snell Roundhand', 'cursive';
   background-color: transparent;
@@ -34,7 +34,7 @@
 @media only screen and (max-width: 600px) {
   .landing .row h2{
     font-size: 20px;
-    white-space: nowrap; /* prevent the text from wrapping */
+    white-space: nowrap; 
     color: #FDF7E4;
     font-family: 'Snell Roundhand', 'cursive';
     background-color: transparent;
@@ -68,7 +68,7 @@
   font-family: 'Snell Roundhand', 'cursive';
 }
 .landing .buttons button:hover{
-  position: relative; /* This establishes a new stacking context for the buttons */
+  position: relative;
   z-index: 2;
   box-shadow: 0 5px 10px #7C93C3;
   transform: scale(1.05);
@@ -132,7 +132,7 @@
 
 .registration button:hover {
   box-shadow: 0 5px 10px #7C93C3;
-  transform: scale(1.05); /* Slightly increase size on hover */
+  transform: scale(1.05); 
 }
 
 .registration input {
@@ -142,7 +142,7 @@
   border-radius: 25px;
   border: none;
   box-shadow: 0 2px 7px #80185F;
-  margin-bottom: 30px; /* Spacing between input fields */
+  margin-bottom: 30px; 
   display: flex;
   color: white;
 }
@@ -150,7 +150,7 @@
 .registration input:hover {
   background-color:transparent;
   box-shadow: 0 5px 10px #7C93C3;
-  transform: scale(1.05); /* Slightly increase size on hover */
+  transform: scale(1.05); 
   color: white;
 }
 
@@ -242,7 +242,7 @@
 }
 .signIn .buttons .signin:hover {
   box-shadow: 0 5px 10px #7C93C3;
-  transform: scale(1.05); /* Slightly increase size on hover */
+  transform: scale(1.05); 
   background-image: linear-gradient(180deg, #ffa48d, #ff4e98); 
 }
 
@@ -265,13 +265,13 @@
 }
 .signIn .buttons .signup:hover {
   box-shadow: 0 5px 10px #7C93C3;
-  transform: scale(1.05); /* Slightly increase size on hover */
+  transform: scale(1.05); 
   background-image: linear-gradient(180deg, #ffa48d, #ff4e98); 
 }
 
 
 .signIn button:last-child {
-  margin-bottom: 0; /* Remove margin for the last button */
+  margin-bottom: 0; 
 }
 
 
@@ -279,7 +279,7 @@
   z-index: 1;
   width: 500px;
   height:500px;
-  border-radius: 50%; /*make it round*/
+  border-radius: 50%; 
   border: 1.5px solid #ba9699; 
   background-color: transparent;
   position:absolute;
@@ -335,7 +335,7 @@
   position:absolute;
   top:50%;
   left:49%;
-  transform: translate(-50%, -50%);/*shift the element up and left by half half*/
+  transform: translate(-50%, -50%);
 }
 
 .discussion{
@@ -716,7 +716,7 @@
   border-radius: 20px;
   border: none;
   box-shadow: 0 2px 7px #80185F;
-  margin-right: 10px; /* Adjust spacing between input and button */
+  margin-right: 10px;
   display: flex;
   color: white;
 }
